--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ local.properties
 #
 node_modules/
 npm-debug.log
+examples/rctsockets/android/.project
+examples/rctsockets/android/.settings/org.eclipse.buildship.core.prefs
