--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ node_modules/
 npm-debug.log
 examples/rctsockets/android/.project
 examples/rctsockets/android/.settings/org.eclipse.buildship.core.prefs
+android/.project
+android/.settings/org.eclipse.buildship.core.prefs
